# cmake_sandbox

./: .gitignore  README.md
myProject/: CMakeLists.txt
myProject/apps/AppA/: CMakeLists.txt
myProject/apps/AppA/src/: main.cpp  version.h.in
myProject/libs/: CMakeLists.txt
myProject/libs/libA/: CMakeLists.txt
myProject/libs/libA/include/libA/: alpha.h
myProject/libs/libA/src/: alpha.cpp
